--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div style="position:relative">
+<div id="canvasAnimaion" style="position:relative">
   <div style="position:absolute;left:0;right:0;text-align:center;">
       <div id="particles-js"></div>
     </div>
